--- a/_config.yml
+++ b/_config.yml
@@ -5,16 +5,16 @@ url: "https://roamgom.github.io"
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
   # Meta
-  title: Type on Strap
-  avatar: assets/img/triangle.svg
+  title: Moving Bear
+  avatar: assets/img/roamgom.jpg
   favicon: assets/favicon.ico
   gravatar: # Email MD5 hash
-  description: "A website with blog posts and pages" # used by search engines
+  description: "roamgom's memory" # used by search engines
 
   # Header and footer text
   header_text: > #two or three lines to describe your site
-     <p>Change header text in <code>_config.yml</code> <br> to update this feature.</p>
-  header_text_feature_image: assets/img/pexels/triangular.jpeg
+     <p>세상을 돌아다니며 기록하는 개발자</p>
+  header_text_feature_image: assets/img/pexels/disco-full.jpeg
   footer_text: >
    Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
 
@@ -24,14 +24,14 @@ theme_settings:
   behance:
   bitbucket:
   dribbble:
-  facebook:
+  facebook: "https://www.facebook.com/roamgom"
   flickr:
   gitlab:
-  github: "sylhare"
+  github: "roamgom"
   google_plus:
   instagram:
   keybase:
-  linkedin:  # Full URL
+  linkedin: "https://www.linkedin.com/in/ji-hyung-kim-1390a198/"
   pinterest:
   reddit:
   soundcloud:
