--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ theme_settings:
 
   # Header and footer text
   header_text: > #two or three lines to describe your site
-     <p>세상을 돌아다니며 기록하는 개발자</p>
+     <p>개발자?</p>
   header_text_feature_image: assets/img/pexels/disco-full.jpeg
   footer_text: >
    Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
